--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,10 @@
 }
 
 p {
-  padding: 25px;
-  padding-bottom: 5px;
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+h4 {
+  text-align: end;
 }
